# conceptual-fitness

./: .gitignore  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py  models.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  body.py  dashboard.py  health.py  metrics.py  profile.py  scores.py  sync.py  tags.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/google_health/: client.py  data_types.py
backend/app/services/: app_auth.py  health_dates.py  interval_totals.py  metric_rollups.py  normalization.py  oauth.py  rate_limit.py  scores.py  summaries.py  sync.py
backend/app/tasks/: celery_app.py  sync.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0002_scores_and_baselines.py  0003_profile_fitness_goal.py  0004_app_auth_sessions.py  0005_onboarding_profile_fields.py  0006_timestamp_sync_cursors.py  0007_metric_rollups_and_ledger.py  0008_hash_provider_ledger_ids.py  0009_slim_provider_ledger.py  0010_drop_provider_record_ledger.py  0011_production_metric_storage_policy.py  0012_metric_hourly_rollups.py
backend/scripts/: profile_sync.py
backend/tests/: conftest.py  test_auth_routes.py  test_body_metrics_routes.py  test_google_health_client.py  test_metric_details.py  test_normalization.py  test_oauth.py  test_profile_tags_routes.py  test_routes.py  test_scores.py  test_sleep_detail.py  test_sync.py  test_workout_routes.py
docs/: scores-explainer.md
(+34 files in other folders)
