[project]
name = "conceptual-fitness-backend"
version = "0.1.0"
description = "FastAPI backend for Conceptual Fitness Google Health API OAuth, sync, and health data storage."
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13",
  "celery>=5.3",
  "cryptography>=42",
  "fastapi>=0.110",
  "httpx>=0.27",
  "psycopg[binary]>=3.1",
  "pydantic>=2.7",
  "python-dotenv>=1.0",
  "python-multipart>=0.0.9",
  "redis>=5.0",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"
